src/objects/Information_Session__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>The city (location) of the session</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date of the session</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The end time of the session</description>
        <label>End Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <description>The associated listing for this session</description>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Information Sessions</relationshipLabel>
        <relationshipName>Information_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>The start time of the session</description>
        <label>Start Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>The street address of the session</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <description>The venue of the session</description>
        <inlineHelpText>The venue details where the information session is being held.</inlineHelpText>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Information Session</label>
    <nameField>
        <displayFormat>INFO-{0000}</displayFormat>
        <label>Information Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Information Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>